@@ -260,9 +260,13 @@
                   <object class="GtkProgressBar" id="progress_bar">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="valign">center</property>
                     <property name="text" translatable="yes"> </property>
                     <property name="show_text">True</property>
                     <property name="ellipsize">end</property>
+                    <style>
+                      <class name="menu_tooltip_container"/>
+                    </style>
                   </object>
                   <packing>
                     <property name="resize">False</property>
