@@ -14,6 +14,7 @@ Morten:
 	* Named expression fixes.  [#833]
 	* Speed up large-range copies.  [#836]
 	* Add missing undo/redo for sheet display options.
+	* Style the progress bar we use for menu tooltips.
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.59
